--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
+    "mini-css-extract-plugin": "^2.5.3",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.66.0",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
     "webpack-merge": "^5.8.0"
