--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react custom boilerplate using webpack",
   "main": "./src/index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js ",
+    "start": "webpack serve --config webpack.dev.js --mode development",
     "build": "webpack --config webpack.prod.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,6 +21,12 @@
     "css-loader": "^6.5.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
@@ -37,6 +43,9 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   }
 }
